Now it is responsive... It was missing a meta tag. + a fix for row spacing.

--- a/css/torgui.css
+++ b/css/torgui.css
@@ -13,6 +13,11 @@ html
   }
 }
 
+.container-fluid {
+  padding-right: 0px;
+  padding-left: 0px;
+}
+
 .badge.pstatus
 {
   width: 100px;
